[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["iloveangpao <mrlyrplease@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
requests-html = "^0.10.0"
cssselect = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
